kube/deploy/core/monitoring/kps/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "kps-prometheus-egress-labelled"
  namespace: "monitoring"
spec:
  description: "Allow Prometheus to egress to pods labelled with metrics exporters, no port restrictions"
  endpointSelector:
    matchLabels:
      prometheus: "kps"
  egress:
    - toEndpoints:
        - matchLabels:
            prom.home.arpa/kps: "allow"
          matchExpressions:
            - key: "io.kubernetes.pod.namespace"
              operator: "Exists"
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "kps-prometheus-ingress-labelled"
spec:
  description: "Allow Prometheus to egress to pods labelled with metrics exporters, no port restrictions"
  endpointSelector:
    matchLabels:
      prom.home.arpa/kps: "allow"
  ingress:
    - fromEndpoints:
        - matchLabels:
            prometheus: "kps"
